# ai-dashboard

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ai-dashboard.spec  dashboard.py  go.mod  main.go  pyproject.toml  requirements.txt  run.sh  test_css.py  worklog.md
.github/workflows/: build.yml  ci-cd.yml  ci.yml
pkg/types/: types.go
src/ai_dashboard/: __init__.py  __main__.py  app.py
src/ai_dashboard/core/: __init__.py  config.py  exceptions.py  logging.py
src/ai_dashboard/models/: __init__.py  agent.py  ai_model.py  chat.py  task.py  user.py
src/ai_dashboard/screens/: __init__.py  agents.py  chat.py  dashboard.py  login.py  models.py  settings.py  tasks.py
src/ai_dashboard/services/: __init__.py  agent_service.py  auth.py  model_service.py  storage.py  task_service.py
src/ai_dashboard/styles/: __init__.py  theme.py
src/ai_dashboard/utils/: __init__.py  formatting.py  helpers.py  validation.py
src/ai_dashboard/widgets/: __init__.py  agent_card.py  model_card.py  stat_box.py  status_indicator.py  task_item.py
tests/: conftest.py
tests/security/: test_auth_security.py
tests/unit/: test_models.py  test_services.py
