[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dashboard"
version = "1.0.0"
description = "Enterprise AI Orchestration System - Professional TUI for managing AI models, agents, and workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AI Dashboard Team", email = "team@ai-dashboard.dev"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "argon2-cffi>=23.1.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    # Linting & Formatting
    "ruff>=0.1.9",
    "black>=24.1.0",
    "isort>=5.13.0",
    
    # Type Checking
    "mypy>=1.8.0",
    "types-aiofiles>=23.2.0",
    
    # Security
    "bandit>=1.7.6",
    
    # Code Quality
    "pylint>=3.0.0",
    "pydocstyle>=6.3.0",
    "vulture>=2.10",
    
    # Package Quality
    "pyroma>=4.0",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    
    # Build Tools
    "pyinstaller>=6.3.0",
    "build>=1.0.0",
]

[project.scripts]
ai-dashboard = "dashboard:main"

[project.urls]
Homepage = "https://github.com/ai-dashboard/ai-dashboard"
Documentation = "https://github.com/ai-dashboard/ai-dashboard#readme"
Repository = "https://github.com/ai-dashboard/ai-dashboard"
Issues = "https://github.com/ai-dashboard/ai-dashboard/issues"

# =============================================================================
# RUFF CONFIGURATION (Fast Linter & Formatter)
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E", "W",
    # Isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-bandit
    "S",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-quotes
    "Q",
    # flake8-return
    "RET",
    # flake8-simplify
    "SIM",
    # flake8-unused-arguments
    "ARG",
    # Pylint
    "PL",
    # tryceratops
    "TRY",
    # flynt
    "FLY",
    # Perflint
    "PERF",
    # Ruff-specific
    "RUF",
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    # Allow magic methods without docstrings
    "D105", "D107",
    # Allow TODO comments
    "TD002", "TD003",
    # Allow print statements in CLI apps
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "D"]
"__init__.py" = ["F401", "D104"]

[tool.ruff.lint.isort]
known-first-party = ["dashboard"]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# =============================================================================
# BLACK CONFIGURATION (Code Formatter)
# =============================================================================
[tool.black]
target-version = ["py310", "py311", "py312", "py313"]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | \.venv
    | venv
    | __pycache__
    | build
    | dist
)/
'''

# =============================================================================
# ISORT CONFIGURATION (Import Sorting)
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["dashboard"]
force_single_line = true
skip = [".git", ".mypy_cache", ".pytest_cache", ".venv", "venv", "__pycache__", "build", "dist"]

# =============================================================================
# MYPY CONFIGURATION (Type Checking)
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "textual.*",
    "rich.*",
    "argon2.*",
    "aiohttp.*",
]
ignore_missing_imports = true

# =============================================================================
# PYLINT CONFIGURATION (Code Quality)
# =============================================================================
[tool.pylint.main]
ignore = [".git", ".mypy_cache", ".pytest_cache", ".venv", "venv", "__pycache__", "build", "dist"]
jobs = 0
limit-inference-results = 100
persistent = true
py-version = "3.10"
suggestion-mode = true

[tool.pylint.messages_control]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    # Allow for TUI apps
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "broad-exception-caught",
    "missing-module-docstring",
]

[tool.pylint.format]
max-line-length = 100
max-module-lines = 2000
indent-after-paren = 4
indent-string = "    "

[tool.pylint.basic]
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
method-naming-style = "snake_case"
module-naming-style = "snake_case"
variable-naming-style = "snake_case"

[tool.pylint.typecheck]
ignored-modules = ["textual", "rich"]

# =============================================================================
# BANDIT CONFIGURATION (Security Linting)
# =============================================================================
[tool.bandit]
targets = ["dashboard.py"]
exclude_dirs = [".git", ".mypy_cache", ".pytest_cache", ".venv", "venv", "__pycache__", "build", "dist", "tests"]
skips = ["B101", "B311"]

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = ["dashboard"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = true

# =============================================================================
# VULTURE CONFIGURATION (Dead Code Detection)
# =============================================================================
[tool.vulture]
ignore_names = ["main"]
min_confidence = 80
paths = ["dashboard.py"]
